// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a error message for invalid video URL in edit mode 1`] = `
<div
  className="video-inner"
>
  <div>
    <div
      className="ui message"
    >
      <center>
        Please enter a valid URL by deleting the block and adding a new video block.
      </center>
    </div>
  </div>
</div>
`;

exports[`renders a incorrect peertube video body component 1`] = `
<div
  className="video-inner"
>
  <div
    className="invalidVideoFormat"
  />
</div>
`;

exports[`renders a peertube video body component 1`] = `
<div
  className="video-inner"
>
  <div
    className="ui embed video-embed 16:9"
  >
    <div
      className="fallback-placeholder"
    />
    <button
      aria-label="Play video"
      className="video-play-button"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path fill-rule="evenodd" d="M11,10.71 L11,25.29 L23.96,18 L11,10.71 Z M9,28.71 L9,7.29 L28.04,18 L9,28.71 Z"/>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "white",
            "height": "100%",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
</div>
`;

exports[`renders a youtu.be video body component 1`] = `
<div
  className="video-inner"
>
  <div
    className="ui embed video-embed 16:9"
  >
    <img
      alt=""
      className="placeholder"
      fetchpriority="high"
      src="https://img.youtube.com/vi/KwRSRRyuk-Q/sddefault.jpg"
    />
    <button
      aria-label="Play video"
      className="video-play-button"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path fill-rule="evenodd" d="M11,10.71 L11,25.29 L23.96,18 L11,10.71 Z M9,28.71 L9,7.29 L28.04,18 L9,28.71 Z"/>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "white",
            "height": "100%",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
</div>
`;

exports[`renders a youtube short video body component 1`] = `
<div
  className="video-inner"
>
  <div
    className="ui embed video-embed 16:9"
  >
    <img
      alt=""
      className="placeholder"
      fetchpriority="high"
      src="https://img.youtube.com/vi/ayyZ_S30Lhc/sddefault.jpg"
    />
    <button
      aria-label="Play video"
      className="video-play-button"
      onClick={[Function]}
    >
      <svg
        className="icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path fill-rule="evenodd" d="M11,10.71 L11,25.29 L23.96,18 L11,10.71 Z M9,28.71 L9,7.29 L28.04,18 L9,28.71 Z"/>",
          }
        }
        onClick={null}
        style={
          {
            "fill": "white",
            "height": "100%",
            "width": "auto",
          }
        }
        viewBox="0 0 36 36"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
  </div>
</div>
`;

exports[`renders a youtube video body component 1`] = `
<div
  className="video-inner"
>
  <div
    className="ui 16:9 embed"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="video play icon"
      onClick={[Function]}
    />
    <img
      className="placeholder"
      src="https://img.youtube.com/vi/KwRSRRyuk-Q/sddefault.jpg"
    />
  </div>
</div>
`;

exports[`renders a youtube video body component in edit mode 1`] = `
<div
  className="video-inner"
>
  <div
    className="ui 16:9 embed"
    onClick={[Function]}
    onKeyPress={[Function]}
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="video play icon"
      onClick={[Function]}
    />
    <img
      className="placeholder"
      src="https://img.youtube.com/vi/KwRSRRyuk-Q/sddefault.jpg"
    />
  </div>
</div>
`;

exports[`renders invalid video body component with invalid URL 1`] = `
<div
  className="video-inner"
>
  <div
    className="invalidVideoFormat"
  />
</div>
`;
